; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_tablespace.c_init_tablespaces.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_tablespace.c_init_tablespaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i64 }

@old_cluster = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@new_cluster = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@os_info = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@.str = private unnamed_addr constant [80 x i8] c"Cannot upgrade to/from the same system catalog version when\0Ausing tablespaces.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_tablespaces() #0 {
  %1 = call i32 (...) @get_tablespace_paths()
  %2 = call i32 @set_tablespace_directory_suffix(%struct.TYPE_5__* @old_cluster)
  %3 = call i32 @set_tablespace_directory_suffix(%struct.TYPE_5__* @new_cluster)
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @os_info, i32 0, i32 0), align 8
  %5 = icmp sgt i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %0
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @old_cluster, i32 0, i32 0), align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @new_cluster, i32 0, i32 0), align 4
  %9 = call i64 @strcmp(i32 %7, i32 %8)
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %6
  %12 = call i32 @pg_fatal(i8* getelementptr inbounds ([80 x i8], [80 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %6, %0
  ret void
}

declare dso_local i32 @get_tablespace_paths(...) #1

declare dso_local i32 @set_tablespace_directory_suffix(%struct.TYPE_5__*) #1

declare dso_local i64 @strcmp(i32, i32) #1

declare dso_local i32 @pg_fatal(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
